[package]
name = "dbk64"
version = "0.0.4"
edition = "2021"
authors = ["Alice42069"]
readme = "README.md"
description = "A simple library that uses cheat engines dbk64 driver to read/write process memory"
repository = "https://github.com/Alice42069/dbk64"
license = "MIT"

[dependencies]
dataview = "1.0.1"

[dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]
